[gd_scene load_steps=2 format=3 uid="uid://bex3gbne3h2c"]

[ext_resource type="Script" path="res://addons/noded/project_process/feature_container.gd" id="1_acr1h"]

[node name="FeatureContainer" type="PanelContainer"]
script = ExtResource("1_acr1h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "General Taks"
horizontal_alignment = 1

[node name="OnTimelineCheck" type="CheckButton" parent="VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Timeline"

[node name="TasksRoot" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddTask" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "- Add Task -"

[connection signal="toggled" from="VBoxContainer/Header/OnTimelineCheck" to="." method="_on_on_timeline_check_toggled"]
[connection signal="pressed" from="VBoxContainer/AddTask" to="." method="_on_add_task_pressed"]
